Cleanup long line

--- a/dos33.html
+++ b/dos33.html
@@ -2110,8 +2110,8 @@ With that "legalese" out of the way ... enjoy the read!
 218A:BD 1F 1D       266             LDA <a class='v' href='#CMDETB'>CMDETB</a>+<span class='n'>1</span>,X  ; GET CMD ADR                   ;[..
 218D:48             267             PHA             ; ONTO STACK                    ; ..
 218E:BD 1E 1D       268             LDA <a class='v' href='#CMDETB'>CMDETB</a>,X                                    ; ..
-2191:48             269             PHA                                             ; ..
-2192:60             270             RTS             ; AND GOTO COMMAND              ; ..] classic technique of 6502 jump table, use RTS to "call" the function pointer
+2191:48             269             PHA                                             ; ..  Classic technique of 6502 jump table,
+2192:60             270             RTS             ; AND GOTO COMMAND              ; ..] use RTS to "call" the function pointer
 </pre>
 
 <div class='sticky'><hr><hr class='join'>=== <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Pages <a class="page" name='page150'>150</a> - 154, <a class='ts' href='#T1S0'>T1S0</a> - <a class='ts' href='#T1S2'>T1S2</a>, $<span class='n'>A193</span> .. $<span class='n'>A330</span>  ===<hr class='join'><hr></div>
