--- a/dos33.html
+++ b/dos33.html
@@ -5708,9 +5708,13 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 <hr>3676:EE BD 35       116             INC <a class="v" href="#CCBRRN">CCBRRN</a>      ;BUMP CCB RECORD NUMBER         ; === Page <a class="page" name="page10">10</a>
 3679:D0 03          117             BNE GOBACK
 367B:EE BE 35       118             INC CCBRRN+<span class='n'>1</span>    ;TO GET TO NEXT SECTOR
-367E:A9 00          119 GOBACK      LDA #<span class='n'>0</span>
+367E:A9 00          119 <a class='f' id='367E' name='GOBACK'>GOBACK      </a>LDA #<span class='n'>0</span>
 3680:8D 5D 36       120             STA EOFFLAG     ;TURN FLAG OFF
-3683:4C 46 25       121             JMP FIXIT2      ;Go to FIXIT2 as exit           ; Oh look, we have lowercase CapsLock on //e!
+<span class='macro'>
+3683:4C 46 25       121             JMP FIXIT2      ;Go to FIXIT2 as exit           ; Oh look, we have lowercase CapsLock on //e!</span><span class='patch'>
+                        ; === DOS 3.3 D PATCH ===                                   
+3683:4C 84 3A       121             JMP FIXIT3                                      </span>; DOS 3.3 1983<span class='patch'>
+                        ; === DOS 3.3 D PATCH ===                                   </span>
                     122             REP 40
                     123 VPATCH      EQU *
 3686:8D BC 35       124             STA CCBRQM      ;ORIGINAL INSTRUCTION
@@ -6941,23 +6945,23 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3A78:8D FB 04       141             STA $<span class='n'>4FB</span>        ; CLEARS FUNNY 80 COL STUFF          ; <a class='magic' id='_3A79'>magic number</a> TEXT screen hole <span class='todo'>TODO</span>
 3A7B:8D 0C C0       142             STA $<span class='n'>C00C</span>       ; TURNS 80 COL OFF
 3A7E:8D 0E C0       143             STA $<span class='n'>C00E</span>       ; TURN OFF  ALT CHAR SET        ; /sarcasm <i>If only we could define symbols ...</i>
-3A81:4C 2F FB       144             JMP $<span class='n'>FB2F</span>       ; MONITOR INIT ROUTINE          ;          <i>Oh wait!</i> <b>We already have</b> <a class='x' href='#MONINIT'>MONINIT</a> in <a class='file' href='#BOOTLDR'>BOOTLDR</a>
+3A81:4C 2F FB       144             JMP $<span class='n'>FB2F</span>       ; MONITOR INIT ROUTINE          ;          <i>Oh wait!</i> <b>We already have</b> <a class='x' href='#MONINIT'>MONINIT</a> in <a class='file' href='#BOOTLDR'>BOOTLDR</a><span class="patch">
+                        ; === DOS 3.3 D PATCH ===       Called from <a class='x' href='#GOBACK'>GOBACK+5</a> = $<span class='n'>3683</span>
+3A84:AD BD 35                       LDA <a class='d' href='#CCBBYT'>CCBBYT</a>                                      
+3A87:8D E6 35                       STA <a class='d' href='#DCBCSB'>DCBCSB</a>                                      
+3A8A:8D EA 35                       STA <a class='d' href='#DCBCRR'>DCBCRR</a>                                      
+3A8D:BA                             TSX                                             
+3A8E:8E 9B 33                       STX <a class='d' href='#ENTSTK'>ENTSTK</a>                                      
+3A91:4C 7F 33                       JMP <a class='x' href='#GOODIO'>GOODIO</a>                                      
+                        ; === DOS 3.3 D PATCH ===                                   </span>
                     145             PAGE
-                    146 <a class="f" name="PEC1"        >PEC1        </a>EQU *           ;Tell relocater where to stop   ; See <a class="v" href="#CDETAB">CDETAB</a>, <a class="file" href="#RELOCTR">RELOCTR</a>, Page <a class="page" href="#page115">115</a>
-                    147 PD1         EQU &gt;*
-                    148 <a class="f" name="PD2"         >PD2         </a>EQU $96-PD1<span class="patch">
-                    === DOS 3.3 D? PATCH ===        
-                    3A84:AD BD 35   LDA $<span class='n'>35BD</span> ; <span class="todo">TODO</span>
-                    3A87:8D E6 35   STA $<span class='n'>35E6</span> ; <span class="todo">TODO</span>
-                    3A8A:8D EA 35   STA $<span class='n'>35EA</span> ; <span class="todo">TODO</span>
-                    3A8D:BA         TSX             
-                    3A8E:8E 9B 33   STX $<span class='n'>339B</span> ; <span class="todo">TODO</span>
-                    3A91:4C 7F 33   JMP $<span class='n'>337F</span> ; <span class="todo">TODO</span>
-                    === DOS 3.3 ? PATCH ===         </span>
-3A84:00 00 00 00    149             DS  PD2,0       ;Must pad to $XX96              ; [.. <a class='mem' id='_3A84' coords='18'>*wastes*</a> 18 bytes
-3A88:00 00 00 00                                                                    ;  .. No, no, no!
-3A8C:00 00 00 00                                                                    ;  .. Negative array index OFFSETS like the P6 PROM uses
-3A90:00 00 00 00                                                                    ;  ..
+                    146 <a class='f' id='3A94' name='PEC1'        >PEC1        </a>EQU *           ;Tell relocater where to stop   ; See <a class="v" href="#CDETAB">CDETAB</a>, <a class="file" href="#RELOCTR">RELOCTR</a>, Page <a class="page" href="#page115">115</a>
+                    147 <a class='e' id='0094' name='PD1'         >PD1         </a>EQU &gt;*
+                    148 <a class='f' id='2'    name="PD2"         >PD2         </a>EQU $96-PD1
+                    149             DS  PD2,0       ;Must pad to $XX96              ; [.. <a class='mem' id='_3A84' coords='2'>*wastes*</a> 2 bytes
+                                                                                    ;  .. No, no, no!
+                                                                                    ;  .. Negative array index OFFSETS like the P6 PROM uses
+                                                                                    ;  ..
 3A94:00 00                                                                          ;  ..]
 3A96:00 01 98       150             DFB $00,$01,$98                                 ; 96 97 --   *sigh* And the comment that this is the
 3A99:99 02 03       151             DFB $99,$02,$03                                 ; -- 9A 9B   64 disk nibbles of 6&amp;2 Read Table
